--- a/Liarodon/Base.lproj/Localizable.strings
+++ b/Liarodon/Base.lproj/Localizable.strings
@@ -5,3 +5,8 @@
   Created by 131e55 on 2017/04/24.
   Copyright © 2017年 Liaro Inc. All rights reserved.
 */
+
+"home_timeline_title" = "Home";
+"local_timeline_title" = "Local";
+"federated_timeline_title" = "Federated";
+"profile_title" = "Profile";
