--- a/Liarodon/Profile/ja.lproj/Profile.strings
+++ b/Liarodon/Profile/ja.lproj/Profile.strings
@@ -15,4 +15,4 @@
 "iiT-Nj-ERV.text" = "Bless";
 
 /* Class = "UILabel"; text = "Requested"; ObjectID = "ncf-2Q-SLs"; */
-"ncf-2Q-SLs.text" = "Requested";
+"ncf-2Q-SLs.text" = "リクエスト済み";
